--- a/docs/.vuepress/theme/styles/custom.css
+++ b/docs/.vuepress/theme/styles/custom.css
@@ -4,10 +4,10 @@
    * 主题色
    * -------------------------------------------------------------------------- */
 
-  --vp-c-brand-1: rgba(177, 209, 130, 1);             /* 链接颜色、强调色 */
-  --vp-c-brand-2: rgba(104, 143, 78, 1);              /* 链接、按钮 hover 颜色 */
-  --vp-c-brand-3: rgba(43, 70, 60, 1);                /* 背景色、边框色 */
-  --vp-c-brand-soft: rgba(125, 206, 19, 0.314);       /* 辅助色 */
+  --vp-c-brand-1: rgba(72, 117, 39, 1);               /* 链接颜色、强调色 */
+  --vp-c-brand-2: rgba(119, 194, 64, 1);              /* 链接、按钮 hover 颜色 */
+  --vp-c-brand-3: rgba(194, 247, 156, 1);             /* 背景色、边框色 */
+  --vp-c-brand-soft: rgba(150, 245, 81, 0.314);       /* 辅助色 */
 
   /**
    * 文本颜色
@@ -21,26 +21,18 @@
    * 背景色
    * -------------------------------------------------------------------------- */
 
-  --vp-c-bg: rgba(255, 255, 255, 1);                  /* 主体背景 */
-  --vp-nav-bg-color: rgba(255, 255, 255, 1);          /* 导航栏背景 */
-  --vp-nav-screen-bg-color: rgba(255, 255, 255, 1);   /* 移动端导航栏 */
-  --vp-local-nav-bg-color: rgba(255, 255, 255, 1);    /* 页面内导航栏 */
-  --vp-sidebar-bg-color: rgba(246, 246, 247, 1);      /* 侧边栏背景 */
-  --vp-code-block-bg: rgba(246, 248, 250, 1);         /* 代码块背景 */
+  --vp-c-bg: #fff;                                    /* 主体背景 */
+  --vp-nav-bg-color: #fff;                            /* 导航栏背景 */
+  --vp-nav-screen-bg-color: #fff;                     /* 移动端导航栏 */
+  --vp-local-nav-bg-color: #fff;                      /* 页面内导航栏 */
+  --vp-sidebar-bg-color: #f6f6f7;                     /* 侧边栏背景 */
+  --vp-code-block-bg: #f6f8fa;                        /* 代码块背景 */
 
   /**
    * 导航栏样式
    * -------------------------------------------------------------------------- */
   
-  --vp-nav-logo-height: 40px;                          /* Logo 高度 */
-  --vp-nav-height: 64px;                               /* 导航栏高度 */
-
-  /* 导航栏链接颜色 */
-  --vp-nav-link-color: var(--vp-c-text-2);            /* 普通状态 */
-  --vp-nav-link-hover-color: var(--vp-c-brand-1);     /* 悬停状态 */
-  --vp-nav-link-active-color: var(--vp-c-brand-1);    /* 激活状态 */
-  --vp-nav-link-font-size: 1.2rem;                      /* 导航链接字体大小 */
-  --vp-nav-link-font-weight: 500;                     /* 导航链接字重 */
+   --vp-nav-logo-height: 80%;                          /* Logo 高度 */ 
 }
 
 [data-theme="dark"] {
@@ -49,10 +41,10 @@
    * 主题色
    * -------------------------------------------------------------------------- */
 
-  --vp-c-brand-1: rgba(125, 206, 19, 1);              /* 链接颜色、强调色 */
-  --vp-c-brand-2: rgba(170, 207, 82, 1);              /* 链接、按钮 hover 颜色 */
-  --vp-c-brand-3: rgba(105, 178, 115, 1);             /* 背景色、边框色 */
-  --vp-c-brand-soft: rgba(43, 70, 60, 0.314);         /* 辅助色 */
+  --vp-c-brand-1: rgba(194, 247, 156, 1);             /* 链接颜色、强调色 */
+  --vp-c-brand-2: rgba(119, 194, 64, 1);              /* 链接、按钮 hover 颜色 */
+  --vp-c-brand-3: rgba(72, 117, 39, 1);               /* 背景色、边框色 */
+  --vp-c-brand-soft: rgba(150, 245, 81, 0.314);       /* 辅助色 */
 
   /**
    * 文本颜色
@@ -72,15 +64,6 @@
   --vp-local-nav-bg-color: #1b1b1f;                   /* 页面内导航栏 */
   --vp-sidebar-bg-color: #161618;                     /* 侧边栏背景 */
   --vp-code-block-bg: #202127;                        /* 代码块背景 */
-
-  /**
-   * 导航栏样式
-   * -------------------------------------------------------------------------- */
-  
-  /* 深色模式导航栏链接颜色 */
-  --vp-nav-link-color: var(--vp-c-text-2);            /* 普通状态 */
-  --vp-nav-link-hover-color: var(--vp-c-brand-1);     /* 悬停状态 */ 
-  --vp-nav-link-active-color: var(--vp-c-brand-1);    /* 激活状态 */
 }
 
 /* 添加导航链接样式 */
@@ -115,6 +98,5 @@
 .search-wrapper{
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
-
